NIFI-14131 Expanded PMD coverage to include tests and fixed violations (#9610)
Signed-off-by: David Handermann <exceptionfactory@apache.org>